recursion.cons.length.Length.scala.error
Compilation error:
Length:4: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
  return Nil
         ^Length:5: error: not found: value list
  return list.tail
         ^